--- a/.config/themes/Windows10/waybar/style.css
+++ b/.config/themes/Windows10/waybar/style.css
@@ -1,168 +1,104 @@
-@define-color rosewater #f5e0dc;
-@define-color flamingo #f2cdcd;
-@define-color pink #f5c2e7;
+@import "colors.css";
 
-@define-color mauve #89b4fa;
-
-@define-color red #f38ba8;
-@define-color maroon #eba0ac;
-@define-color peach #fab387;
-@define-color yellow #f9e2af;
-@define-color green #a6e3a1;
-@define-color teal #94e2d5;
-@define-color sky #89dceb;
-@define-color sapphire #74c7ec;
-@define-color blue #89b4fa;
-@define-color lavender #b4befe;
-
-@define-color text #f0f8ff;
-
-@define-color subtext1 #bac2de;
-@define-color subtext0 #a6adc8;
-@define-color overlay2 #9399b2;
-@define-color overlay1 #7f849c;
-@define-color overlay0 #6c7086;
-@define-color surface2 #585b70;
-@define-color surface1 #45475a;
-@define-color surface0 #313244;
-
-@define-color base #1e303e;
-@define-color mantle #101010;
-@define-color crust #11111b;
-
+/* Windows 10-like taskbar */
 * {
-    min-height: 0;
-    font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
-    font-size: 18px;
+  min-height: 0;
+  font-family: "Segoe UI", "Noto Sans", "Inter", Roboto, Helvetica, Arial, sans-serif;
+  font-size: 13px;
 }
 
 #waybar {
-    background-color: @base;
-    border-right: 4px solid #586377;
+  background-color: @base;
+  border-top: 1px solid @outline;
+  color: @text;
 }
 
 #waybar .module {
-    color: @text;
-    padding: 0px 0px;
-    padding-left: 2px;
-    margin: -10px 5px -10px;
+  color: @text;
+  padding: 0 10px;
+  margin: 0;
 }
 
-#waybar .module:hover { color: @mauve; }
-
-#window#waybar {
-    color: @text;
-    transition-property:  background-color;
-    transition-duration: 0.5s;
+#waybar .module:hover {
+  background-color: @hover;
 }
 
-button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    padding: 0px 5px;
-    margin: 5px 0px;
-}
-
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px transparent;
-}
-
-#workspaces button {
-    box-shadow: none;
-    text-shadow: none;
-    
-    margin-left: 0px;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-right: 0px;
-
-    padding-left: 5px;
-    padding-right: 5px;
-    
-    color: @text;
-    animation: ws_normal 20s ease-in-out 1;
-}
-
+/* Start button */
 #custom-win {
-    font-size: 30px;
-    color: #f0f8ff;
+  font-size: 18px;
+  padding: 0 14px;
+  margin: 0;
+  background: transparent;
 }
+
 #custom-win:hover {
-    color: #0b42b9;
+  background-color: @hover;
 }
 
+/* Workspaces as "desktop" indicator */
+#workspaces button {
+  padding: 0 10px;
+  margin: 0;
+  border-radius: 0;
+  color: @text_dim;
+  background: transparent;
+}
 
+#workspaces button.focused,
 #workspaces button.active {
-    background: @mauve;
-    color: @crust;
-
-    margin-left: 0px;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-right: 0px;
-
-    animation: ws_active 5s ease-in-out 1;
-    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+  color: @text;
+  box-shadow: inset 0 -2px @accent;
 }
 
 #workspaces button:hover {
-    background: @mantle;
-    color: @text;
-    animation: ws_hover 5s ease-in-out 1;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+  background-color: @hover;
+  color: @text;
 }
 
-#tags button {
-    color: @mauve;
-    background: @base;
-    padding: 0px 0px;
-    margin: 5px 0px;
+/* Taskbar apps (wlr/taskbar) */
+#taskbar button {
+  padding: 0 10px;
+  margin: 0;
+  border-radius: 0;
+  background: transparent;
+  color: @text;
 }
 
-#tags button.occupied { color: @mantle; }
-
-#tags button.focused { color: @sky; }
-
-#tags button.urgent { color: @red; }
-
-#custom-notification { color: @text; }
-
-#group-10, #group-9, #group-8, #group-7, #group-6, 
-#group-5,  #group-4, #group-3, #group-2, #group-1 {
-    padding: 0px 10px;
-    margin: 0px 5px;
+#taskbar button:hover {
+  background-color: @hover;
 }
 
-#custom-next, #custom-pause, #custom-previous {
-  font-size: 17px;
+#taskbar button.active {
+  box-shadow: inset 0 -2px @accent;
+}
+
+/* Tray and right-side indicators */
+#tray,
+#network,
+#wireplumber,
+#battery,
+#clock {
+  padding: 0 10px;
+}
+
+#clock {
+  padding: 0 12px;
+  font-size: 12px;
+  min-width: 88px;
 }
 
 #network.disconnected,
-#pulseaudio.muted,
 #wireplumber.muted {
-    color: @red;
+  color: @danger;
 }
 
 #battery.charging,
 #battery.plugged {
-    color: @green;
+  color: @success;
 }
 
-label:focus { background-color: @base; }
-
-#battery.critical:not(.charging) {
-    color: @red;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+tooltip {
+  background: @crust;
+  border: 1px solid @outline;
+  color: @text;
 }
-
-/** Modificador: Fravelz ***************************/
-
-/** ********************************************** **/
-/** Creditos (Autor Original, Estilo Cappuccine):  **/
-/**          ZepharDev Nvim (REPO: Hyprcraft)      **/
-/** ********************************************** **/
